--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,5 +6,17 @@
   "singlePlayer": "single player",
   "multiplayer": "multiplayer",
   "playOnline": "play online",
-  "score": "score"
+  "score": "score",
+  "language": "language",
+  "english": "english",
+  "bulgarian": "bulgarian",
+  "difficultyLevel": "difficultyLevel",
+  "easy": "easy",
+  "normal": "normal",
+  "hard": "hard",
+  "theme": "theme",
+  "pink": "pink",
+  "green": "green",
+  "update": "update",
+  "reset": "reset"
 }
