--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,7 +10,7 @@
   "language": "language",
   "english": "english",
   "bulgarian": "bulgarian",
-  "difficultyLevel": "difficultyLevel",
+  "difficultyLevel": "difficulty level",
   "easy": "easy",
   "normal": "normal",
   "hard": "hard",
