--- a/i18n/bg.json
+++ b/i18n/bg.json
@@ -2,6 +2,7 @@
   "home": "начало",
   "profile": "профил",
   "settings": "настройки",
+  "playerVsAI": "player vs ai",
   "exit": "излез",
   "singlePlayer": "един играч",
   "multiplayer": "двама играчи",
@@ -18,5 +19,11 @@
   "pink": "розова",
   "green": "зелена",
   "update": "обнови",
-  "reset": "начални"
+  "reset": "начални",
+  "chooseYourSide": "choose your side",
+  "chooseDifficultyLevel": "choose difficulty level",
+  "chooseFirstPlayer": "choose first player",
+  "start": "start",
+  "x": "x",
+  "o": "o"
 }
