add new items to dictionary

--- a/i18n/bg.json
+++ b/i18n/bg.json
@@ -1,24 +1,25 @@
 {
-  "home": "начало",
-  "profile": "профил",
-  "settings": "настройки",
-  "exit": "излез",
-  "singlePlayer": "един играч",
-  "multiplayer": "двама играчи",
-  "playOnline": "играй онлайн",
-  "score": "рекорди",
-  "language": "език",
-  "english": "английски",
-  "bulgarian": "български",
-  "difficultyLevel": "ниво на трудност",
-  "easy": "лесно",
-  "normal": "нормално",
-  "hard": "трудно",
-  "theme": "тема",
-  "pink": "розова",
-  "green": "зелена",
-  "update": "обнови",
-  "reset": "начални",
+  "home": "home",
+  "homeScreenTitle": "tic tac toe",
+  "profile": "profile",
+  "settings": "settings",
+  "exit": "exit",
+  "singlePlayer": "single player",
+  "multiplayer": "multiplayer",
+  "playOnline": "play online",
+  "score": "score",
+  "language": "language",
+  "english": "english",
+  "bulgarian": "bulgarian",
+  "difficultyLevel": "difficulty level",
+  "easy": "easy",
+  "normal": "normal",
+  "hard": "hard",
+  "theme": "theme",
+  "pink": "pink",
+  "green": "green",
+  "update": "update",
+  "reset": "reset",
   "chooseYourSide": "choose your side",
   "chooseDifficultyLevel": "choose difficulty level",
   "chooseFirstPlayer": "choose first player",
