--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,7 +1,14 @@
 {
+  "homeScreenTitle": "tic tac toe",
+  "profileScreenTitle": "my profile",
+  "settingsScreenTitle": "my settings",
+  "faqScreenTitle": "faq/help",
+  "singlePlayerSettingsScreenTitle": "player vs ai",
+  "singlePlayerGameScreenTitle": "player vs computer",
   "home": "home",
   "profile": "profile",
   "settings": "settings",
+  "faq": "faq",
   "exit": "exit",
   "singlePlayer": "single player",
   "multiplayer": "multiplayer",
